k8s/ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-demo-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spring-demo-service
                port:
                  number: 8080
    - host: solr.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solr
                port:
                  number: 8983
